unpackaged/main/default/objects/Opportunity/Opportunity.object-meta.xml
<CustomObject>
    <businessProcesses>
        <fullName>Direct to contract sale</fullName>
        <description>Sales process without lot reservation</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Home</fullName>
        </values>
        <values>
            <fullName>Engagement</fullName>
        </values>
        <values>
            <fullName>Pending Offer</fullName>
        </values>
        <values>
            <fullName>Pre-Contract</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Quote</fullName>
        </values>
        <values>
            <fullName>Quote Closed</fullName>
        </values>
        <values>
            <fullName>Under Contract</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sale with lot reservation</fullName>
        <description>Sales process with lot reservation</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Home</fullName>
        </values>
        <values>
            <fullName>Engagement</fullName>
        </values>
        <values>
            <fullName>Lot Reservation</fullName>
        </values>
        <values>
            <fullName>Pending Offer</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Quote</fullName>
        </values>
        <values>
            <fullName>Quote Closed</fullName>
        </values>
        <values>
            <fullName>Under Contract</fullName>
        </values>
    </businessProcesses>
    <sharingModel>Private</sharingModel>
</CustomObject>