unpackaged/main/default/objects/Opportunity/fields/Area_of_Interest__c.field-meta.xml
<CustomField>
        <fullName>Area_of_Interest__c</fullName>
        <inlineHelpText>Select all areas of interest</inlineHelpText>
        <label>Area of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cedar Park / Leander</fullName>
                </value>
                <value>
                    <fullName>Central &amp; East Austin</fullName>
                </value>
                <value>
                    <fullName>Dripping Springs</fullName>
                </value>
                <value>
                    <fullName>Georgetown / Liberty Hill</fullName>
                </value>
                <value>
                    <fullName>Lakeway / Bee Cave</fullName>
                </value>
                <value>
                    <fullName>San Marcos</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
                <value>
                    <fullName>Ann Arundel</fullName>
                </value>
                <value>
                    <fullName>Fairfax</fullName>
                </value>
                <value>
                    <fullName>Frederick</fullName>
                </value>
                <value>
                    <fullName>Loudoun</fullName>
                </value>
                <value>
                    <fullName>Montgomery</fullName>
                </value>
                <value>
                    <fullName>Prince William</fullName>
                </value>
                <value>
                    <fullName>Sussex</fullName>
                </value>
                <value>
                    <fullName>Talbot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>