unpackaged/main/default/objects/Opportunity/fields/Base_Model_Price__c.field-meta.xml
<CustomField>
        <fullName>Base_Model_Price__c</fullName>
        <label>Base Model Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>