unpackaged/main/default/objects/Opportunity/fields/Budget_Confirmed__c.field-meta.xml
<CustomField>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </CustomField>