unpackaged/main/default/objects/Opportunity/fields/Do_you_currently_own_or_rent__c.field-meta.xml
<CustomField>
        <fullName>Do_you_currently_own_or_rent__c</fullName>
        <label>Do you currently own or rent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>