unpackaged/main/default/objects/Opportunity/fields/Home_Swing__c.field-meta.xml
<CustomField>
        <fullName>Home_Swing__c</fullName>
        <label>Home Swing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                    <default>true</default>
                    <label>Left</label>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>