unpackaged/main/default/objects/Opportunity/fields/Household_Income__c.field-meta.xml
<CustomField>
        <fullName>Household_Income__c</fullName>
        <label>Household Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $39,000</fullName>
                </value>
                <value>
                    <fullName>$40,000 - $99,000</fullName>
                </value>
                <value>
                    <fullName>$100,000 - $149,000</fullName>
                </value>
                <value>
                    <fullName>$150,000 - $199,000</fullName>
                </value>
                <value>
                    <fullName>$200,000 - $299,000</fullName>
                </value>
                <value>
                    <fullName>$300,000 - $399,000</fullName>
                </value>
                <value>
                    <fullName>$400,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>