unpackaged/main/default/objects/Opportunity/fields/How_long_have_you_been_house_hunting__c.field-meta.xml
<CustomField>
        <fullName>How_long_have_you_been_house_hunting__c</fullName>
        <label>How long have you been house hunting?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 1 Month</fullName>
                </value>
                <value>
                    <fullName>1-3 Months</fullName>
                </value>
                <value>
                    <fullName>3-6 Months</fullName>
                </value>
                <value>
                    <fullName>6+ Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>