unpackaged/main/default/objects/Opportunity/fields/IsAutomatedStageUpdate__c.field-meta.xml
<CustomField>
        <fullName>IsAutomatedStageUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAutomatedStageUpdate</label>
        <type>Checkbox</type>
    </CustomField>