unpackaged/main/default/objects/Opportunity/fields/Lot__c.field-meta.xml
<CustomField>
        <fullName>Lot__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Lot</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Lot must belong to the selected subdivision, be available (open) and be released for sale.</errorMessage>
            <filterItems>
                <field>Lot__c.Subdivision__c</field>
                <operation>equals</operation>
                <valueField>$Source.Subdivision__c</valueField>
            </filterItems>
            <filterItems>
                <field>Lot__c.Released_for_Sale__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Lot__c.Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </CustomField>