unpackaged/main/default/objects/Opportunity/fields/Lot_Address__c.field-meta.xml
<CustomField>
        <fullName>Lot_Address__c</fullName>
        <formula>Lot__r.Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Address</label>
        <type>Text</type>
    </CustomField>