unpackaged/main/default/objects/Opportunity/fields/Lot_Hold_Expiry_Date__c.field-meta.xml
<CustomField>
        <fullName>Lot_Hold_Expiry_Date__c</fullName>
        <label>Lot Hold Expiry Date</label>
        <type>Date</type>
    </CustomField>