unpackaged/main/default/objects/Opportunity/fields/Lot_Premium__c.field-meta.xml
<CustomField>
        <fullName>Lot_Premium__c</fullName>
        <label>Lot Premium</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>