unpackaged/main/default/objects/Opportunity/fields/Lot_Price__c.field-meta.xml
<CustomField>
        <fullName>Lot_Price__c</fullName>
        <label>Lot Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>