unpackaged/main/default/objects/Opportunity/fields/Marketing_Community__c.field-meta.xml
<CustomField>
        <fullName>Marketing_Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Community</label>
        <referenceTo>Marketing_Community__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </CustomField>