unpackaged/main/default/objects/Opportunity/fields/Newstar_ID__c.field-meta.xml
<CustomField>
        <fullName>Newstar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Newstar ID</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>