unpackaged/main/default/objects/Opportunity/fields/Real_Estate_Agent__c.field-meta.xml
<CustomField>
        <fullName>Real_Estate_Agent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Real Estate Agent</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Select a valid real estate agent</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Real Estate Agent</value>
            </filterItems>
            <infoMessage>Select a real estate agent representing the customer for this deal.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </CustomField>