unpackaged/main/default/objects/Opportunity/fields/ROI_Analysis_Completed__c.field-meta.xml
<CustomField>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </CustomField>