unpackaged/main/default/objects/Opportunity/fields/Sales_Agent_Sales_Office_Relationship__c.field-meta.xml
<CustomField>
        <fullName>Sales_Agent_Sales_Office_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Agent Sales Office Relationship</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SalesAgentSalesOfficeLink__c.Sales_Office__c</field>
                <operation>equals</operation>
                <valueField>$Source.Sales_Office__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SalesAgentSalesOfficeLink__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </CustomField>