unpackaged/main/default/objects/Opportunity/fields/Subdivision__c.field-meta.xml
<CustomField>
        <fullName>Subdivision__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Subdivision must belong to the selected sales office and the selected marketing community.</errorMessage>
            <filterItems>
                <field>Subdivision__c.Sales_Office__c</field>
                <operation>equals</operation>
                <valueField>$Source.Sales_Office__c</valueField>
            </filterItems>
            <filterItems>
                <field>Subdivision__c.Marketing_Community__c</field>
                <operation>equals</operation>
                <valueField>$Source.Marketing_Community__c</valueField>
            </filterItems>
            <infoMessage>Select a subdivision</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Subdivision__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </CustomField>