unpackaged/main/default/objects/Opportunity/fields/Total_Discount_Amount__c.field-meta.xml
<CustomField>
        <fullName>Total_Discount_Amount__c</fullName>
        <label>Total Discount Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>