unpackaged/main/default/objects/Opportunity/fields/Total_Estimated_Sale_Amount__c.field-meta.xml
<CustomField>
        <fullName>Total_Estimated_Sale_Amount__c</fullName>
        <formula>Base_Model_Price__c 
+ Lot_Premium__c 
+ Lot_Price__c 
+ Total_Options_Amount__c 
- Total_Discount_Amount__c 
+ Total_Tax_Amount__c 
- Total_Tax_Rebate_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Estimated Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>