unpackaged/main/default/objects/Opportunity/fields/Total_Sale_Amount__c.field-meta.xml
<CustomField>
        <fullName>Total_Sale_Amount__c</fullName>
        <description>Presents either an actual deal total set by NEWSTAR or an estimated total computed locally in Salesforce</description>
        <formula>IF( Total_Actual_Sale_Amount__c&gt;0,  Total_Actual_Sale_Amount__c,  Total_Estimated_Sale_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>