unpackaged/main/default/objects/Opportunity/fields/Visit_Date__c.field-meta.xml
<CustomField>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </CustomField>