unpackaged/main/default/objects/Opportunity/recordTypes/Direct_offer.recordType-meta.xml
<RecordType>
        <fullName>Direct_offer</fullName>
        <active>true</active>
        <businessProcess>Direct to contract sale</businessProcess>
        <label>Direct offer</label>
    </RecordType>