unpackaged/main/default/objects/Opportunity/recordTypes/Lot_reservation.recordType-meta.xml
<RecordType>
        <fullName>Lot_reservation</fullName>
        <active>true</active>
        <businessProcess>Sale with lot reservation</businessProcess>
        <label>Lot reservation</label>
    </RecordType>