unpackaged/main/default/objects/Opportunity/validationRules/Enforce_presited_model.validationRule-meta.xml
<ValidationRule>
        <fullName>Enforce_presited_model</fullName>
        <active>true</active>
        <errorConditionFormula>(
ISCHANGED(Model__c)
||
ISCHANGED(Lot__c)
)
&amp;&amp;
Lot__c!=null
&amp;&amp;
(TEXT(Lot__r.Type__c)=='Regular')
&amp;&amp;
Lot__r.Assigned_Model__c!=null
&amp;&amp;
Model__c!=Lot__r.Assigned_Model__c</errorConditionFormula>
        <errorMessage>The selected lot is a Regular lot with a pre-sited model assigned. The model selected for the Opportunity should match the model pre-sited for the lot.</errorMessage>
    </ValidationRule>