unpackaged/main/default/objects/Opportunity/validationRules/Enforce_spec_model.validationRule-meta.xml
<ValidationRule>
        <fullName>Enforce_spec_model</fullName>
        <active>true</active>
        <errorConditionFormula>(
ISCHANGED(Model__c)
||
ISCHANGED(Lot__c)
)
&amp;&amp;
Lot__c!=null
&amp;&amp;
(TEXT(Lot__r.Type__c)='Spec' || TEXT(Lot__r.Type__c)='Model')
&amp;&amp;
Model__c!=Lot__r.Assigned_Model__c</errorConditionFormula>
        <errorMessage>The selected lot is of type Spec or Model. The model selected for the Opportunity should match the model assigned to the Spec lot.</errorMessage>
    </ValidationRule>