unpackaged/main/default/objects/Opportunity/listViews/All_Cancelled_Opportunities.listView-meta.xml
<ListView>
        <fullName>All_Cancelled_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>All Cancelled Opportunities</label>
    </ListView>