unpackaged/main/default/objects/Opportunity/listViews/Default_Opportunity_Pipeline.listView-meta.xml
<ListView>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Total_Sale_Amount__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Subdivision__c</columns>
        <columns>Model__c</columns>
        <columns>Lot__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunity Pipeline</label>
    </ListView>